--- a/_data/socialmedia.yml
+++ b/_data/socialmedia.yml
@@ -1,24 +1,14 @@
-- name: Twitter
-  url: https://twitter.com/abcd
-  class: fa fa-twitter-square
-  title: "Follow me @foo"
-
-- name: Google Plus
-  url: https://plus.google.com/+foo
-  class: fa fa-google-plus-square
-  title: "Follow me +foo"
-
 - name: GitHub
-  url: https://github.com/xyz123abc
+  url: https://github.com/kaiomagahaes
   class: fa fa-github-square
   title: Code repository
 
-- name: Contact
+- name: Contacto
   url: "/contact/"
   class: fa fa-envelope-square
-  title: "Reach Us"
+  title: "Fale comigo"
 
 - name: RSS
   url: "/feed.xml"
   class: fa fa-rss-square
-  title: "Subscribe to RSS"
+  title: "Se inscreveva no RSS"
