--- a/_config.yml
+++ b/_config.yml
@@ -47,50 +47,38 @@ jekyll-mentions:
 include: [".htaccess"]
 exclude: ["lib", "config.rb", "Gemfile", "Capfile", "Gemfile.lock", "config", "log", "Rakefile", "Rakefile.rb", "rakefile", "README.md", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec", "Gruntfile.js", "package.json", "node_modules", "LICENSE", "vendor", "assets", "_plugins", "public/dormant"]
 
-# About/contact
-author:
-  name:              Foo Boo
-  url:               https://twitter.com/abcd
-  avatar:         foo.png
-  #email:           
-
 # Owner/author information
 owner:
-  name:           Foo Boo
-  avatar:         foo.png
-  #email:          
+  name:           Kaio Magalhães
+  avatar:         https://s.gravatar.com/avatar/6761a7f93581017da9274a07c64554a3?s=80
+  #email:         me@kaiomagalhaes.com
   # Use the coder's toolbox at http://coderstoolbox.net/string/#!encoding=xml&action=encode&charset=us_ascii to encode your description into XML string
   description:
   # Social networking links used in footer. Update and remove as you like.
-  twitter:        abcd
-  facebook:       
-  github:         xyz123abc
-  stackexchange:  
-  linkedin:       https://www.linkedin.com/in/foo
-  instagram:      
+  twitter:
+  facebook:
+  github:         kaiomagalhaes
+  stackexchange:
+  linkedin:
+  instagram:
   flickr:
-  tumblr:  
-  google_plus:    https://plus.google.com/+foo
+  tumblr:
+  google_plus:
   # orcid and google scholar IDs are different than standard username.
-  orcid: xyz123abc
-  gscholar: xyz123abc
+  orcid:
+  gscholar:
 
 ## sidebar links:
 # For external links add external: true
 links:
   - title: <i class="iconside iconm-home"></i> Home
     url: /
-  - title: <i class="iconside iconm-user"></i> About
-    url: /about/
   - title: <i class="iconside iconm-quill"></i> Blog
     url: /blog/
   - title: <i class="fa fa-tags"></i> Tags
     url: /tags/
   - title: <i class="fa fa-archive"></i> Archive
     url: /archive/
-  - title: <i class="iconside iconm-wordpress"></i> Old Blog
-    url: https://foo.wordpress.com
-    external: true
   - title: <i class="iconside iconm-envelop"></i> Contact
     url: /contact/
   - title: <i class="iconside iconm-twitter"></i> Twitter
@@ -100,19 +88,15 @@ links:
     url: /feed.xml
 
 # Google Custom Search:
-#google_search: xyz123abc
+#google_search:
 
 # Twitter stream widget:
 # Replace xyz123abc with your twitter widget id from https://twitter.com/settings/widgets
-#twitter_widget_id: xyz123abc
+#twitter_widget_id:
 
 # Add disqus username for Disqus comment board:
-disqus_shortname: foo
+disqus_shortname: kaiomagalhaes
 
 # Analytics and webmaster tools stuff goes here
-#google_analytics:   xyz123abc
-
-#### For dummy website only - remove if you wish ####
-github_repo: https://github.com/dyndna/lanyon-plus
-version: 1.1.1
+#google_analytics:
 ## END ##
